--- a/components/footer.html
+++ b/components/footer.html
@@ -7,8 +7,9 @@
         <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
         <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
         <!-- Validation links -->
-        <li><a href="#" id="validation_link_html">Validate HTML</a></li>
-        <li><a href="#" id="validation_link_css">Validate CSS</a></li>
+        <li><a href="#" id="validation-link-html">Validate HTML</a></li>
+        <li><a href="#" id="validation-link-css">Validate CSS</a></li>
+
     </ul>
     <p>Designed by Chris Li Enterprises &copy; 2025</p>
 </footer>
