updated footer to include fcc certification

--- a/components/footer.html
+++ b/components/footer.html
@@ -6,6 +6,8 @@
         <li><a href="https://www.freecodecamp.org/ChrisLi">FreeCodeCamp Profile</a></li>
         <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
         <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
+        <li><a href="https://www.freecodecamp.org/certification/ChrisLi/responsive-web-design">FCC Responsive Web Design Certification</a></li>
+
         <!-- Validation links -->
         <li><a href="#" id="validation-link-html">Validate HTML</a></li>
         <li><a href="#" id="validation-link-css">Validate CSS</a></li>
