--- a/components/footer.html
+++ b/components/footer.html
@@ -3,6 +3,7 @@
         <li><a href="https://webpages.charlotte.edu/cli36/">CLT WEB</a></li>
         <li><a href="https://kwisssummers.github.io/">GitHub</a></li>
         <li><a href="https://kwisssummers.github.io/itis3135/">Course Github.io</a></li>
+        <li><a href="https://github.com/KwissSummers/itis3135">ITIS3135 GitHub Repository</a></li>
         <li><a href="https://www.freecodecamp.org/ChrisLi">FreeCodeCamp Profile</a></li>
         <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
         <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
