--- a/styles/default.css
+++ b/styles/default.css
@@ -243,3 +243,33 @@ html, body {
         padding: 40px; /* Adjust padding for laptops */
     }
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #444;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tr:nth-child(odd) {
+    background-color: #ffffff;
+}
+
+figcaption {
+    font-weight: bold;
+    margin-bottom: 8px;
+    text-align: left;
+}
